fixe layout bug

--- a/style.css
+++ b/style.css
@@ -515,10 +515,6 @@ footer {
   padding-left: 2%;
 }
 
-a {
-  width: 10%;
-}
-
 .menu_header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -528,6 +524,10 @@ a {
           align-items: center;
   margin-left: 5%;
   gap: 50px;
+}
+
+.menu_header a {
+  width: 10%;
 }
 
 .menu-logo {
